small fix on mobile site

--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -15,8 +15,8 @@ $medGray: #999;
 $lightGray: #ccc;
 $xlightGray: #f2f2f2;
 $white: #fff;
-$red: #d42;
-$darkRed: #c30;
+$accent: #d42;
+$darkAccent: #c30;
 
 // Font stacks
 $helvetica: Helvetica, Arial, sans-serif;
